# airbus-fbw-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
fbw/: Cargo.toml
fbw/src/: lib.rs
model/: Cargo.toml  build.rs
model/src/: lib.rs  wrapper.hpp
