[package]
name = "model"
version = "0.1.0"
authors = ["Gus Caplan <me@gus.host>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.55"

[dependencies]
