[package]
name = "model"
version = "0.1.0"
authors = ["Gus Caplan <me@gus.host>"]
edition = "2018"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { git = "https://github.com/rust-lang/rust-bindgen" }
msfs_sdk = { git = "https://github.com/devsnek/msfs-rs", branch = "main" }

[dependencies]
